Kubedemo/Traefik-demo/weave/scope-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weave-scope-app
  labels:
    app: weave-scope-app
    provider: weavescope
    heritage: helm
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: weave-scope-app
        provider: weavescope
        heritage: helm
    spec:
      containers:
      - name: weave-scope-app
        image: weaveworks/scope:0.14.0
        args:
        - --no-probe
        - --app.weave.addr=
        ports:
        - containerPort: 4040
