Kubedemo/Traefik-demo/weave/scope-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: weave-scope-app
  labels:
    app: weave-scope-app
    provider: weavescope
    heritage: helm
spec:
  ports:
  - name: http
    port: 80
    targetPort: 4040
  selector:
    app: weave-scope-app
