Kubedemo/Traefik-demo/weave/scope-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave-scope-app
spec:
  rules:
  - host: weavescope.capgemini-demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: weave-scope-app
          servicePort: http
